force-app/main/default/objects/Applicant_Proposal_Association__c/Applicant_Proposal_Association__c.object-meta.xml
<CustomObject>
    <label>Applicant Proposal Association</label>
    <nameField>
        <displayFormat>APA -{00000}</displayFormat>
        <label>Applicant Proposal Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicant Proposal Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>