force-app/main/default/objects/Applicant_Proposal_Association__c/fields/A_to_J_Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>A_to_J_Cost_Total__c</fullName>
    <formula>BLANKVALUE(Access_Charges_Total__c, 0) +
BLANKVALUE(Animal_Associated_Cost_Total__c, 0) +
BLANKVALUE(Equipment_Total__c, 0) +
BLANKVALUE(Exp_Procedure_Cost_Total__c, 0) +
BLANKVALUE(Maintenance_Cost_Total__c, 0) +
BLANKVALUE(Materials_and_Consumables_Total__c, 0) +
BLANKVALUE(Miscellaneous_Total__c, 0) +
BLANKVALUE(Personal_Support_Tab_Cost_Total__c, 0) +
BLANKVALUE(Purchase_Cost_Total__c, 0) +
BLANKVALUE(Staff_Total__c, 0) +
BLANKVALUE(Travel_to_Meetings_Cost_Total__c, 0) +
BLANKVALUE(WOHI_Allowance_Total__c, 0) +
BLANKVALUE(Total_FA_cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A to J Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>