force-app/main/default/objects/Applicant_Proposal_Association__c/fields/A_to_J_Cost_Year1__c.field-meta.xml
<CustomField>
    <fullName>A_to_J_Cost_Year1__c</fullName>
    <formula>BLANKVALUE(Access_Charges_Year1__c, 0) +
BLANKVALUE(Animal_Associated_cost_Year1__c, 0) +
BLANKVALUE(Equipment_Year1__c, 0) +
BLANKVALUE(Exp_Procedure_cost_Year1__c, 0) +
BLANKVALUE(Maintenance_cost_Year1__c, 0) +
BLANKVALUE(Materials_and_Consumables_Year1__c, 0) +
BLANKVALUE(Miscellaneous_Year1__c, 0) +
BLANKVALUE(Personal_Support_Tab_Cost_Year1__c, 0) +
BLANKVALUE(Purchase_cost_Year1__c, 0) +
BLANKVALUE(Staff_Year1__c, 0) +
BLANKVALUE(Travel_to_Meetings_Cost_Year1__c, 0) +
BLANKVALUE(WOHI_Allowance_Year1__c, 0) +
BLANKVALUE(FA_for_Year1__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A to J Cost Year1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>