force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Abstract_Ongoing__c.field-meta.xml
<CustomField>
    <fullName>Abstract_Ongoing__c</fullName>
    <description>Abstracts for ongoing grants and fellowships</description>
    <inlineHelpText>Abstracts for ongoing grants and fellowships</inlineHelpText>
    <label>Abstract(Ongoing)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>