force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Access_Charges_Justification__c.field-meta.xml
<CustomField>
    <fullName>Access_Charges_Justification__c</fullName>
    <description>Access Charges Justification</description>
    <inlineHelpText>Access Charges Justification</inlineHelpText>
    <label>Access Charges Justification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>