force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Access_Charges_Total__c.field-meta.xml
<CustomField>
    <fullName>Access_Charges_Total__c</fullName>
    <formula>BLANKVALUE(Access_Charges_Year1__c, 0) +
BLANKVALUE(Access_Charges_Year2__c, 0) +
BLANKVALUE(Access_Charges_Year3__c, 0) +
BLANKVALUE(Access_Charges_Year4__c, 0) +
BLANKVALUE(Access_Charges_Year5__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Access Charges Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>