force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Access_Charges_Year1__c.field-meta.xml
<CustomField>
    <fullName>Access_Charges_Year1__c</fullName>
    <label>Access Charges Year1</label>
    <summarizedField>Staff_Budget__c.Year_1__c</summarizedField>
    <summaryFilterItems>
        <field>Staff_Budget__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Access Charges</value>
    </summaryFilterItems>
    <summaryForeignKey>Staff_Budget__c.Applicant_Proposal_Association__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>