force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Alternative_arrangements_for_facility__c.field-meta.xml
<CustomField>
    <fullName>Alternative_arrangements_for_facility__c</fullName>
    <description>Alternative arrangements for the facilities not available at the Host Institution.</description>
    <inlineHelpText>Alternative arrangements for the facilities not available at the Host Institution.</inlineHelpText>
    <label>Alternative arrangements for facility</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>