force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Animal_Associated_cost_Year1__c.field-meta.xml
<CustomField>
    <fullName>Animal_Associated_cost_Year1__c</fullName>
    <formula>Proposal__r.Animal_Associated_cost_Year1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Associated cost Year1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>