force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Any_ethical_legal_or_privacy__c.field-meta.xml
<CustomField>
    <fullName>Any_ethical_legal_or_privacy__c</fullName>
    <description>Any ethical, legal, or privacy considerations that may affect data sharing.</description>
    <inlineHelpText>Any ethical, legal, or privacy considerations that may affect data sharing.</inlineHelpText>
    <label>Any ethical,legal or privacy</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>