force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Appointment_Date_at_Host_Institution__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_at_Host_Institution__c</fullName>
    <label>Appointment Date at Host Institution</label>
    <type>Date</type>
</CustomField>