force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Collab_with_Supervisor_or_in_Host_Env__c.field-meta.xml
<CustomField>
    <fullName>Collab_with_Supervisor_or_in_Host_Env__c</fullName>
    <description>Have you previously worked with the proposed Fellowship Supervisor or in the Host environment? Explain the duration and nature of the collaboration: joint outputs, data, publications or methods if any.</description>
    <inlineHelpText>Have you previously worked with the proposed Fellowship Supervisor or in the Host environment? Explain the duration and nature of the collaboration: joint outputs, data, publications or methods if any.</inlineHelpText>
    <label>Collab with Supervisor or in Host Env?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>