force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Compilance_with_FAIR_principles__c.field-meta.xml
<CustomField>
    <fullName>Compilance_with_FAIR_principles__c</fullName>
    <description>How will you ensure compliance with FAIR principles (Findable, Accessible, Interoperable, Reusable)</description>
    <inlineHelpText>How will you ensure compliance with FAIR principles (Findable, Accessible, Interoperable, Reusable)</inlineHelpText>
    <label>Compilance with FAIR principles</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>