force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applicant Proposal Associations</relationshipLabel>
    <relationshipName>Applicant_Proposal_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>