force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Current_position_at_the_Host_Institution__c.field-meta.xml
<CustomField>
    <fullName>Current_position_at_the_Host_Institution__c</fullName>
    <label>Current position at the Host Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>