force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Decision_on_previous_application__c.field-meta.xml
<CustomField>
    <fullName>Decision_on_previous_application__c</fullName>
    <description>Decision on previous application</description>
    <inlineHelpText>Decision on previous application</inlineHelpText>
    <label>Decision on previous application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recommended for an award</fullName>
            </value>
            <value>
                <fullName>Declined at interview, but resubmission recommended by the Committee</fullName>
            </value>
            <value>
                <fullName>Declined at interview</fullName>
            </value>
            <value>
                <fullName>Declined at shortlisting (i.e., full application was not shortlisted for interview)</fullName>
            </value>
            <value>
                <fullName>Declined at preliminary application stage (i.e., full application was not invited)</fullName>
            </value>
            <value>
                <fullName>I withdrew my full application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>