force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Declaration_1__c.field-meta.xml
<CustomField>
    <fullName>Declaration_1__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All the Information provided in the application is accurate and true to the best of my knowledge. I understand that providing incorrect or incomplete information could disqualify me from the competition</inlineHelpText>
    <label>Declaration 1</label>
    <type>Checkbox</type>
</CustomField>