force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Declaration_2__c.field-meta.xml
<CustomField>
    <fullName>Declaration_2__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The proposal is free from plagiarism and self-plagiarism. Any use of generative AI tools has been limited to non-intellectual tasks. The proposal has been checked using a plagiarism-check software. I confirm that no plagiarism charges have been filed against me in the past five years. I agree to abide by the decision of India Alliance in case any plagiarism is detected.</inlineHelpText>
    <label>Declaration 2</label>
    <type>Checkbox</type>
</CustomField>