force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Declaration_3__c.field-meta.xml
<CustomField>
    <fullName>Declaration_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All the information provided in the application is accurate and true to the best of my knowledge. I understand that providing incorrect or incomplete information could disqualify me from the competition.</description>
    <inlineHelpText>All the information provided in the application is accurate and true to the best of my knowledge. I understand that providing incorrect or incomplete information could disqualify me from the competition.</inlineHelpText>
    <label>Declaration 3</label>
    <type>Checkbox</type>
</CustomField>