force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Declaration_Sign_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Sign_Date_Time__c</fullName>
    <label>Declaration Sign Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>