force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Describe_WOHI_Plan_and_Sponsor_s__c.field-meta.xml
<CustomField>
    <fullName>Describe_WOHI_Plan_and_Sponsor_s__c</fullName>
    <description>Note: WOHI is mandatory, and complete details must be provided in the full application.</description>
    <inlineHelpText>If identified External Sponsor(s) for Work Outside the Host Institution (WOHI), provide brief details of the plan.
Note: WOHI is mandatory, and complete details must be provided in the full application.</inlineHelpText>
    <label>Describe WOHI Plan and Sponsor(s)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>