force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Equipment_Justification__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Justification__c</fullName>
    <label>Equipment Justification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>