force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Equipment_Total__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Total__c</fullName>
    <formula>BLANKVALUE(Equipment_Year1__c, 0) +
BLANKVALUE(Equipment_Year2__c, 0) +
BLANKVALUE(Equipment_Year3__c, 0) +
BLANKVALUE(Equipment_Year4__c, 0) +
BLANKVALUE(Equipment_Year5__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>