force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Equipment_Year3__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Year3__c</fullName>
    <label>Equipment Year3</label>
    <summarizedField>Equipment__c.Total_Charges__c</summarizedField>
    <summaryFilterItems>
        <field>Equipment__c.Year_Required__c</field>
        <operation>equals</operation>
        <value>3</value>
    </summaryFilterItems>
    <summaryForeignKey>Equipment__c.Applicant_Proposal_Association__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>