force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Exp_Procedure_cost_Year2__c.field-meta.xml
<CustomField>
    <fullName>Exp_Procedure_cost_Year2__c</fullName>
    <formula>Proposal__r.Exp_Procedure_cost_Year2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exp-Procedure cost Year2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>