force-app/main/default/objects/Applicant_Proposal_Association__c/fields/FA_for_Year1__c.field-meta.xml
<CustomField>
    <fullName>FA_for_Year1__c</fullName>
    <formula>Yearly_Scheme__r.FA_for_Year1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FA for Year1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>