force-app/main/default/objects/Applicant_Proposal_Association__c/fields/FA_Percent__c.field-meta.xml
<CustomField>
    <fullName>FA_Percent__c</fullName>
    <formula>Yearly_Scheme__r.FA_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FA Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>