force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Google_Scholar_Profile__c.field-meta.xml
<CustomField>
    <fullName>Google_Scholar_Profile__c</fullName>
    <label>Google Scholar Profile</label>
    <type>Url</type>
</CustomField>