force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Have_you_identified_mentor_on_your_appli__c.field-meta.xml
<CustomField>
    <fullName>Have_you_identified_mentor_on_your_appli__c</fullName>
    <label>Have you identified mentor on your appli</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>