force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Have_you_identified_Sponsor_at_Host_Inst__c.field-meta.xml
<CustomField>
    <fullName>Have_you_identified_Sponsor_at_Host_Inst__c</fullName>
    <label>Have you identified Sponsor at Host Inst</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>