force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Host_Salary_Year3__c.field-meta.xml
<CustomField>
    <fullName>Host_Salary_Year3__c</fullName>
    <label>Host Salary Year3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>