force-app/main/default/objects/Applicant_Proposal_Association__c/fields/How_when_will_your_public_available__c.field-meta.xml
<CustomField>
    <fullName>How_when_will_your_public_available__c</fullName>
    <description>How and when will you make your data publicly available.</description>
    <inlineHelpText>How and when will you make your data publicly available.</inlineHelpText>
    <label>How &amp; when will your public available?</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>