force-app/main/default/objects/Applicant_Proposal_Association__c/fields/IA_Salary_Year4__c.field-meta.xml
<CustomField>
    <fullName>IA_Salary_Year4__c</fullName>
    <label>IA Salary Year4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>