force-app/main/default/objects/Applicant_Proposal_Association__c/fields/If_identified_External_Sponsor_s_for_Wo__c.field-meta.xml
<CustomField>
    <fullName>If_identified_External_Sponsor_s_for_Wo__c</fullName>
    <label>If identified External Sponsor(s) for Wo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>