force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Infrastructure_Facilities_of_Host_Inst__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Facilities_of_Host_Inst__c</fullName>
    <description>Host Institution infrastructure of direct relevance to the proposed project. Include core facilities.</description>
    <inlineHelpText>Host Institution infrastructure of direct relevance to the proposed project. Include core facilities.</inlineHelpText>
    <label>Infrastructure &amp; Facilities of Host Inst</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>