force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Is_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Is_Coordinator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Coordinator</label>
    <type>Checkbox</type>
</CustomField>