force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Is_this_your_first_Application__c.field-meta.xml
<CustomField>
    <fullName>Is_this_your_first_Application__c</fullName>
    <description>Is this your first application to the Alliance?</description>
    <inlineHelpText>Is this your first application to the Alliance?</inlineHelpText>
    <label>Is this your first Application?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>