force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Key_difference_from_previous_application__c.field-meta.xml
<CustomField>
    <fullName>Key_difference_from_previous_application__c</fullName>
    <description>State how the current application differs from the previous application</description>
    <inlineHelpText>State how the current application differs from the previous application</inlineHelpText>
    <label>Key difference from previous application</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>