force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Maintenance_cost_Year3__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_cost_Year3__c</fullName>
    <formula>Proposal__r.Maintenance_cost_Year3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance cost Year3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>