force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Material_Justification__c.field-meta.xml
<CustomField>
    <fullName>Material_Justification__c</fullName>
    <description>Material Justification</description>
    <inlineHelpText>Material Justification</inlineHelpText>
    <label>Material Justification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>