force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Materials_and_Consumables_Total__c.field-meta.xml
<CustomField>
    <fullName>Materials_and_Consumables_Total__c</fullName>
    <formula>BLANKVALUE(Materials_and_Consumables_Year1__c, 0) +
BLANKVALUE(Materials_and_Consumables_Year2__c, 0) +
BLANKVALUE(Materials_and_Consumables_Year3__c, 0) +
BLANKVALUE(Materials_and_Consumables_Year4__c, 0) +
BLANKVALUE(Materials_and_Consumables_Year5__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Materials and Consumables Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>