force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Mentor_City__c.field-meta.xml
<CustomField>
    <fullName>Mentor_City__c</fullName>
    <label>Mentor City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>