force-app/main/default/objects/Applicant_Proposal_Association__c/fields/Mentor_Department__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Department__c</fullName>
    <label>Mentor Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>